gitops/platform/security/kyverno-policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Audit
  rules:
    - name: validate-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kube-node-lease
                - argocd
                - kyverno
                - cert-manager
                - cnpg-system
                - external-secrets
                - monitoring
                - loki
                - minio
                - vault
                - velero
                - trivy-system
                - argo-rollouts
                - piraeus-datastore
                - database
                - redis
      validate:
        message: "Using 'latest' image tag is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
            initContainers:
              - image: "!*:latest"
