gitops/platform/security/kyverno-policies/require-image-signature.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: require-image-signature
  annotations:
    policies.kyverno.io/category: Supply Chain Security
    policies.kyverno.io/severity: critical
spec:
  validationFailureAction: Audit
  background: true
  skipBackgroundRequests: true
  webhookTimeoutSeconds: 30
  failurePolicy: Ignore
  rules:
    - name: verify-seal-images
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kube-node-lease
                - argocd
                - kyverno
                - cert-manager
                - cnpg-system
                - external-secrets
                - monitoring
                - loki
                - minio
                - vault
                - velero
                - trivy-system
                - argo-rollouts
                - piraeus-datastore
                - database
                - redis
                - default
      verifyImages:
        - imageReferences:
            - "ghcr.io/aldoshkineg/*"
          key: |-
            -----BEGIN PUBLIC KEY-----
            MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEhUzEwMGdLyI6HRt2i3EmrNWknX+F
[...]
            -----END PUBLIC KEY-----
          required: true
          mutateDigest: false
          useCache: true
          verifyDigest: true
