gitops/platform/security/kyverno-policies/require-run-as-non-root.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
  annotations:
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Audit
  rules:
    - name: validate-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kube-node-lease
                - argocd
                - kyverno
                - cert-manager
                - cnpg-system
                - external-secrets
                - monitoring
                - loki
                - minio
                - vault
                - velero
                - trivy-system
                - argo-rollouts
                - piraeus-datastore
                - database
                - redis
      validate:
        message: "Pods must set securityContext.runAsNonRoot: true."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
